<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PeripheralIntegrationKit</string>

    <string name="hint_usb_name">/dev/bus/usb/001/003</string>
    <string name="hint_usb_item">Bus 001, Device 003, ID 3118:3649, Western Digital Technologies, Inc.</string>
    <string name="txt_trigger_once_scan">Trigger once scan</string>
    <string name="tips_long_press_the_middle_of_the_screen_to_clear_it">Long press the middle of the screen to clear it</string>
    <string name="txt_baudrate_115200">baudrate : 115200</string>
    <string name="txt_open">open</string>
    <string name="txt_close">close</string>
    <string name="txt_clear">clear</string>
    <string name="txt_send">send</string>
    <string name="txt_port">port :</string>
    <string name="txt_manufacturername">Western Digital Technologies, Inc.</string>
    <string name="txt_id_3118_3649">ID 3118:3649</string>
    <string name="txt_baudrate">baudrate : </string>
    <string name="txt_115200">115200</string>
    <string name="ip_address">IP:<xliff:g id="result">%s</xliff:g></string>
    <string name="hint_ip_address_such_as_192_168_10_100">IP address, such as 192.168.10.100</string>
    <string name="hint_subnet_mask_such_as_255_255_255_0">Subnet mask, such as 255.255.255.0</string>
    <string name="hint_gateway_address_such_as_192_168_10_1">Gateway address, such as 192.168.10.1</string>
    <string name="hint_dns1_address_such_as_4_4_4_4">DNS1 address, such as 4.4.4.4</string>
    <string name="hint_dns2_address_such_as_114_114_114_114">DNS2 address, such as 114.114.114.114</string>

    <!-- Preference Titles -->
    <string name="barcode_scanner_header">Barcode Scanner</string>
    <string name="uhf_rfid_header">UHF RFID</string>
    <string name="comport_header">ComPort</string>
    <string name="usb_device_header">USB Device</string>
    <string name="lan_header">LAN</string>
    <string name="nfc_header">NFC</string>

    <!-- Messages Preferences -->
    <string name="barcode_scanner_test_title">barcode scanner test</string>
    <string name="uhf_rfid_test_title">uhf rfid test</string>
    <string name="comport_test_title">comport test</string>
    <string name="usb_device_test_title">usb device test</string>
    <string name="lan_test_title">lan test</string>
    <string name="nfc_test_title">nfc test</string>
    <string name="txt_sn">序列号 :</string>
    <string name="txt_atqa">ATQA :</string>
    <string name="txt_sak">SAK :</string>
    <string name="txt_maxtransceivelength">MAXTransceiveLength :</string>
    <string name="txt_support_argument">Support argument : </string>
    <string name="camera_header">Camera</string>
    <string name="camera_test_title">camera test</string>
    <string name="msr_header">MSR</string>
    <string name="msr_test_title">msr test</string>
    <string name="print_header">Print</string>
    <string name="print_test_title">print test</string>
    <string name="txt_print">print</string>
    <string name="txt_peripheral_integration_kit">Peripheral Integration Kit</string>
    <string name="txt_dashboard">"Dashboard"</string>
    <string name="txt_peripheral_demo">Peripheral Demo</string>
    <string name="barcode_header">Barcode</string>
    <string name="rfid_header">RFID</string>
    <string name="hint_title">Title</string>
    <string name="txt_msr_reader">MSR Reader</string>
    <string name="txt_please_swipe_a_valid_card">Please swipe a valid card.</string>
    <string name="txt_please_action_the_barcode_trigger">Please action the barcode trigger.</string>
    <string name="txt_barcode_reader">BarCode Reader</string>
    <string name="txt_please_scan_a_tag">Please scan a tag.</string>
    <string name="txt_nfc_tag_reader">NFC Tag Reader</string>
    <string name="txt_vid_pid_id_devicename_usb_class">VID,PID,ID,DeviceName,USB Class</string>
    <string name="txt_com_port_setting_parameters">COM Port Setting Parameters.</string>
    <string name="txt_receive_windows">Receive Windows</string>
    <string name="txt_send_windows">Send Windows</string>
    <string name="txt_fill_ethernet_data">fill ethernet data</string>
    <string name="txt_set_static_ip">set static ip</string>
    <string name="txt_dhcp_open">dhcp open</string>
    <string name="rfid_tag_reader">RFID Tag Reader</string>
    <string name="txt_led">Led</string>
    <string name="txt_blue_led">Blue LED</string>
    <string name="txt_green_led">Green LED</string>
    <string name="txt_red_led">Red LED</string>
    <string name="txt_printstring">PrintString</string>
    <string name="txt_print_barcode">Print BarCode</string>
    <string name="txt_print_picture">Print Picture</string>
    <string name="txt_cut_pager">Cut Pager</string>
    <string name="txt_align">Align:</string>
    <string name="txt_character_size">Character Size:</string>
    <string name="txt_set_position">Set position:</string>
    <string name="txt_set_zoom">Set Zoom:</string>
    <string name="txt_default">Default</string>
</resources>