<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContainerStyle"
    tools:context=".module.ComPortActivity">

    <TextView style="@style/NFCTextViewStyle"
        android:id="@+id/sn_tv"
        android:text="@string/txt_sn" />

    <TextView style="@style/NFCTextViewStyle"
        android:id="@+id/atqa_tv"
        android:text="@string/txt_atqa" />

    <TextView style="@style/NFCTextViewStyle"
        android:id="@+id/sak_tv"
        android:text="@string/txt_sak" />

    <TextView style="@style/NFCTextViewStyle"
        android:id="@+id/len_tv"
        android:text="@string/txt_maxtransceivelength" />

    <TextView style="@style/NFCTextViewStyle"
        android:id="@+id/techlist_tv"
        android:text="@string/txt_support_argument" />

    <ListView
        android:id="@+id/listview"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>