<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContainerStyle"
    tools:context=".module.ComPortActivity">

    <TableRow
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/txt_baudrate"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/baudrate_sp"
            android:entries="@array/com.baudrate"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txt_port"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingVertical="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/port_sp"
            android:entries="@array/com.interface"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </TableRow>

    <Button style="@style/ButtonStyle"
        android:id="@+id/control_btn"
        android:text="@string/txt_open"
        android:layout_width="match_parent" />

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="InefficientWeight">
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="InefficientWeight">
            <EditText
                android:id="@+id/com_data_edt"
                android:padding="4dp"
                android:background="@drawable/edit_background"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights" />

            <Button style="@style/ButtonStyle"
                android:id="@+id/send_btn"
                android:text="@string/txt_send"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="InefficientWeight">
            <TextView
                android:id="@+id/receive_tv"
                android:padding="4dp"
                android:background="@drawable/edit_background"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                tools:ignore="NestedWeights" />

            <Button style="@style/ButtonStyle"
                android:id="@+id/clear_btn"
                android:text="@string/txt_clear"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </TableRow>
</LinearLayout>