<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_title_bar" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView style="@style/AppSubTitleTextViewStyle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/txt_msr_reader"
            android:layout_width="match_parent" />

        <EditText
            android:id="@+id/msr_edt"
            android:background="@drawable/corner_background"
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <Button style="@style/AppButtonStyle"
            android:id="@+id/clear_btn"
            android:text="@string/txt_clear"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_005EB7"
        android:layout_weight="1"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/msr"
            android:background="@drawable/bg"
            android:layout_marginTop="24dp"
            android:layout_width="128dp"
            android:layout_height="48dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:text="@string/txt_please_swipe_a_valid_card"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/msr_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>